# sf-list

./: .gitignore  CLAUDE.md  README.md  explore.py  explore_trends.ipynb  get_urls.py  normalize.py  pyproject.toml  scraper.py  test_eras.py  urls.txt
.ipynb_checkpoints/: explore_trends-checkpoint.ipynb
notes/: 2026-03-12-genre-normalization.md  2026-03-12-initial-scrape-and-data-exploration.md  2026-03-13-description-capture-and-rescrape.md  2026-03-13-description-inference.md  methods-paper.md  narrative-beats.md  open-questions.md  writeup.md
