[project]
name = "sf-list"
version = "0.1.0"
description = "Scraper for Locus Magazine science fiction/fantasy trends analysis"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "jupyter>=1.1.1",
    "ipykernel>=6.31.0",
]
